# tensorflow-ocaml

./: .gitignore  .merlin  LICENSE  META  Makefile  README.md  TODO  _tags  dune-project  libtensorflowcstubs.clib  music.cpkt  myocamlbuild.ml  opam  out.cpkt  tensorflow-ocaml.install  tensorflow.install  tensorflow.mlpack  tensorflow.opam  tensorflow_core.mlpack
examples/: example.ml  example_ops.ml  gradient.ml  helper.ml  linear_regression.ml  linear_regression_common.ml  linear_regression_common.mli  linear_regression_gnuplot.ml  load.ml  load.pbtxt  mnist.ml  mnist.mli  mnist_linear.ml  mnist_linear_old.ml  mnist_nn.ml  nn_common.ml  nn_common.mli  simple.ml  var.ml  var2.ml  variable.ml  variable2.ml
examples/basics/: .merlin  dune  forty_two.ml  helper.ml  jbuild  linear_regression.ml  linear_regression_common.ml  linear_regression_common.mli  linear_regression_gnuplot.ml  nn_common.ml  nn_gnuplot.ml  rnn.ml  rnn_char.ml  rnn_gru_gnuplot.ml  rnn_lstm.ml  rnn_lstm_gnuplot.ml  save_and_load.ml
examples/char_rnn/: .merlin  README.md  char_rnn.ml  dune  jbuild
examples/fast-weights/: fw.ml
examples/fnn/: .merlin  dune  jbuild  mnist_conv_fnn.ml  mnist_linear_fnn.ml  mnist_multi_fnn.ml  neural_style.ml  vgg19.ml
examples/gan/: README.md  dune  mnist_cgan.ml  mnist_dcgan.ml  mnist_gan.ml
examples/load/: .merlin  dune  jbuild  load.ml  load.pb  load.py  lstm.pb  lstm.pbtxt  lstm.py
examples/mnist/: .merlin  README.md  dune  jbuild  mnist.ml  mnist.mli  mnist_conv.ml  mnist_gan.ml  mnist_linear.ml  mnist_nn.ml  mnist_nn.mli  mnist_resnet.ml  mnist_svm.ml
examples/neural-style/: .merlin  README.md  dune  image.ml  image.mli  jbuild  neural_style.ml  vgg19.ml
examples/nn/: mnist_conv_nn.ml  mnist_linear_nn.ml
examples/rnn/: .merlin  dune  jbuild  rnn.ml
gen_ops/: gen.ml  ops.pb
graph/: node.ml  ops.ml  ops.mli
piqi/: piqirun.ml
scripts/: gradient.py  linearmodel.py  simple.py
src/: Makefile  example.ml  graph.ml  graph.mli  node.ml  ops.ml  ops.mli  ops_example.ml  ops_m.ml  ops_m.mli  protobuf.ml  protobuf.mli  protobuf_graph.ml  tensorflow.mlpack  tf_ocaml.mllib  wrapper.ml  wrapper.mli
src/config/: discover.ml  dune  tf_install.ml
src/fnn/: .merlin  cell.ml  cell.mli  dune  fnn.ml  fnn.mli  jbuild
src/gen_ops/: .merlin  dune  gen.ml  how_to_update.txt  jbuild  op_def_piqi.ml  ops.pb  piqirun.ml
src/graph/: .merlin  checkpointing.ml  checkpointing.mli  dune  gradients.ml  gradients.mli  int_map.ml  jbuild  layer.ml  layer.mli  mnist_helper.ml  mnist_helper.mli  node.ml  node.mli  node_protobuf.ml  node_protobuf.mli  ops.ml  ops.mli  ops_example.ml  ops_generated.ml  ops_generated.mli  ops_gradients.ml  ops_gradients.mli  ops_m.ml  ops_m.mli  ops_manual.ml  ops_manual.mli  optimizers.ml  optimizers.mli  registered_gradients.ml  registered_gradients.mli  session.ml  session.mli  text_helper.ml  text_helper.mli  var.ml  var.mli  variable.ml  variable.mli
src/nn/: cell.ml  cell.mli  model.ml  model.mli  nn.ml  nn.mli  rnn.ml  rnn.mli
src/piqi/: graph_piqi.ml  op_def_piqi.ml
src/stubs/: .merlin  dune  jbuild  tf_bindings.ml  tf_gen.ml
src/wrapper/: .merlin  c_api.h  dune  jbuild  operation.ml  operation.mli  protobuf.ml  protobuf.mli  tensor.ml  tensor.mli  tf_bindings.ml  tf_gen.ml  wrapper.ml  wrapper.mli
tests/: .merlin  dune  gradient_tests.ml  jbuild  operator_tests.ml
wrapper/: Makefile  example.ml  graph_piqi.ml  simple.pbtxt  simple.py  tensor.ml  test.pbtxt  wrapper.ml  wrapper.mli
