opam-version: "1.2"
name:         "tensorflow"
bug-reports:  "https://github.com/LaurentMazare/tensorflow-ocaml/issues"
homepage:     "https://github.com/LaurentMazare/tensorflow-ocaml"
dev-repo:     "git+https://github.com/LaurentMazare/tensorflow-ocaml.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" "Nicolas Oury" ]

version: "dev"

build: [["jbuilder" "build" "--only-packages" "tensorflow" "--root" "." "-j" jobs "@install"]]
install: []
remove:  []

depends: [
  "cmdliner"
  "base"
  "stdio"
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "ocamlfind" {build}
  "jbuilder" {build}
]

depopts: ["gnuplot"]

conflicts: [
]

available: [ ocaml-version >= "4.03" ]
