(library
  (name tensorflow_core)
  (public_name tensorflow.core)
  (c_names tf_stubs)
  (c_flags :standard -Wno-incompatible-pointer-types)
  (c_library_flags :standard (:include c_library_flags.sexp) -ltensorflow)
  (libraries bigarray ctypes.foreign ctypes.stubs ctypes))

(rule
  (targets c_library_flags.sexp)
  (deps    (:discover ../config/discover.exe))
  (action  (run %{discover})))

(rule
  (targets tf_bindings.ml)
  (deps    ../stubs/tf_bindings.ml)
  (action  (copy ../stubs/tf_bindings.ml tf_bindings.ml)))

(rule
  (targets tf_stubs.c tf_generated.ml)
  (deps    (:tfgen ../stubs/tf_gen.exe))
  (action  (run %{tfgen})))
